# sql

./: CODEOWNERS  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml
integration/: conftest.py  test_create.py
src/sql/: __init__.py  _functions.py  config.py  dcl.py  dml.py  dql.py  tcl.py  utils.py
src/sql/_clauses/: __init__.py  assignment.py  filter.py  join.py  sort.py
src/sql/_operators/: __init__.py  comparison.py  conjunction.py  null.py
src/sql/ddl/: __init__.py  assign.py
tests/: conftest.py  test_delete.py  test_insert.py  test_join.py  test_select.py  test_sort.py  test_update.py  test_version.py
tests/ddl/: test_alter.py
