[build-system]
requires = ['setuptools>=60.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = "sql"
version = "0.1.0a0"
description = "SQL"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["python", "fluent", "sql"]
requires-python = ">=3.6.2"
authors = [{name = "Jesse P. Johnson", email = "jpj6652@gmail.com"}]
maintainers = [{name = "Jesse P. Johnson", email = "jpj6652@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
    "pydantic",
    "pyodbc",
    "typing-extensions",
]

[project.optional-dependencies]
async = [
    "aioodbc",
]
dev = [
    "build>=0.7.0,<1",
    "wheel>=0.37.1,<1",
    "proman-versioning>=0.5.0-alpha.2",
    "invoke>=1.4",
    "flake8>=3.8.3,<4",
    "mypy>=0.942,<1",
    "pylint>=2.9.5,<3",
    "click==8.0.4",
    "flit>=3,<4",
    "black==22.1.0",
    "isort>=5.9.2,<6",
    "bandit>=1.6.2",
    "safety>=1.9",
    "pytest>=7",
    "pytest-cov>=2.10",
    "tox>=3.24.0,<4",
]

docs = [
    "docstr-coverage>=1.2.0",
    "pydocstyle[toml]>=6.1.1",
    "mkdocs>=1.2",
    "mkdocs-material>=7.2",
    "mkdocstrings>=0.15.2",
]

[project.urls]
homepage = "https://github.com/kuwv/sql"
repository = "https://github.com/kuwv/sql"

[[tool.proman.versioning.files]]
filepath = "pyproject.toml"
pattern = "version = \"${version}\""

[[tool.proman.versioning.files]]
filepath = "src/sql/__init__.py"
pattern = "__version__ = '${version}'"

[[tool.proman.versioning.files]]
filepath = "tests/test_version.py"
pattern = "__version__ == '${version}'"

[tool.pydocstyle]
ignore = [
    "D203",
    "D213",
    "D300",
]

[tool.pylint]
fail-under = 9.0

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "R0903",
    "C0103",
    "W0715",
]

[tool.pylint."FORMAT"]
max-line-length = 79

[tool.pylint."MISCELLANEOUS"]
notes = []

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[tool.black]
line-length = 79
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | build
    | dist
  )
)
'''

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:invoke.*:",
    "ignore::DeprecationWarning:_yaml.*:",
]

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
